# DeepLearning-Group8

./: .gitignore  CLASSIFIER_REPORT.md  FUTURE_EXPERIMENTS.md  LATEX_REPORT.tex  NOTEBOOK_STATUS.md  README.md  REPORT.md  REPORT_LATEX_HANDOFF.md  REPORT_tmp.html  Report_Latex.tex  Report_Latex_v2.tex  Report_Latex_v3.tex  appendix_ablations.tex  pyproject.toml  requirements.txt  slides.md  slides_v2.md  slides_v3.md
.claude/: settings.json
configs/: data.toml  data_128.toml  train_autoencoder.toml  train_autoencoder_128.toml
ct_notebooks/: patchcore_combined.ipynb  wafer-anomaly-detectionv2.ipynb  wafer-cnn-normal-1pct-defect.ipynb  wafer-cnn-normal-1pct-half-classes.ipynb  wafer-patchcore-50k-improved.ipynb  wafer-patchcore-50k-improvedv2.ipynb  wafer-patchcore-50k.ipynb  wafer-patchcore-50kV2.ipynb  wafer-patchcore-efficientnet-b0-50k.ipynb  wafer-patchcore-efficientnet-b1-3-5-layer.ipynb  wafer-patchcore-efficientnet-b1-3-layer.ipynb  wafer-patchcore-efficientnet-b1-50k.ipynb  wafer-patchcore-efficientnet-b1-50k_no_tuning.ipynb  wafer-patchcore-efficientnet-b1-one-layer.ipynb  wafer-patchcore-efficientnet-b2-50k.ipynb  wafer-patchcore-improved.ipynb  wafer-patchcore-vit-b16-811k-defect-tuning.ipynb  wafer-patchcore-vit-b16-811k-one-layer.ipynb  wafer-patchcore-vit-b16-811k-two-block.ipynb  wafer-patchcore-vit-b16-811k_ni_tensor.ipynb  wafer-patchcore-wideresnet50-optimized.ipynb  wafer-trained-patchcore-best.ipynb
data/: README.md
experiments/: README.md
family_reports/: autoencoder.md  backbone_embedding.md  fastflow.md  patchcore.md  svdd.md  vae.md  (+1 more)
(+572 files in other folders)
