[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wafer-defect"
version = "0.1.0"
description = "Wafer defect anomaly detection project"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.9",
  "timm>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
